--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@cloudinary/vue": "^1.12.1",
     "@pinata/sdk": "^2.1.0",
     "@vue/apollo-option": "^4.0.0",
+    "emailjs-com": "^3.2.0",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "pinia": "^2.1.7",
     "react": "^18.2.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.1",
+    "vue-select": "^3.20.3",
     "vuex": "^4.1.0",
     "vuex-persistedstate": "^4.1.0"
   },
